Help me Pleeeeeeeease!

--- a/src/Components/GNB/index.scss
+++ b/src/Components/GNB/index.scss
@@ -1,11 +1,10 @@
 .GNB {
 	padding: 0;
 	margin: 0;
-	background: #42f566;
+	background: #5ce68e;
 
 	&__Inner {
 		z-index: 1000;
-		background: #42f566;
 		justify-content: space-evenly !important;
 
 		&::after {
