--- a/src/Style/login.css
+++ b/src/Style/login.css
@@ -10,21 +10,26 @@
   justify-content: center;
   align-items: center;
   height: 100vh;
-  background: url("bg.jpg") no-repeat center;
-  background-size: cover;
 }
 .login::before{
   content: "";
   position: absolute; z-index: 1;
   top: 0; right: 0; bottom: 0; left: 0;
-  background-color: rgba(0,0,0,.7);
+}
+/*배추 관련 */
+.cabbage{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 30px;
+  width: 60px;
 }
 
 .login-form{position: relative; z-index: 2;}
 .login-form h1{
-  font-size: 32px; color: #fff;
+  font-size: 32px; color: #000;
   text-align: center;
-  margin-bottom: 60px;
+  margin-bottom: 15px; /*배추 때문에 여백 조정*/
 }
 .int-area {
   width: 400px; position: relative;
@@ -34,10 +39,9 @@
 .int-area input{
   width: 100%;
   padding: 20px 10px 10px;
-  background-color: transparent;
   border: none;
   border-bottom: 1px solid #999;
-  font-size: 18px; color: #fff;
+  font-size: 18px; color: #000;
   outline: none;
 }
 
@@ -67,7 +71,7 @@
 .btn-area {margin-top: 30px;}
 .btn-area button {
   width: 100%; height: 50px;
-  background: #166cea;
+  background: #3bbc56;
   color: #fff;
   font-size: 20px;
   border: none;
