--- a/src/Components/TweetBox/posting_style.scss
+++ b/src/Components/TweetBox/posting_style.scss
@@ -4,18 +4,24 @@
 
 * {margin: 0; padding: 0; box-sizing: border-box;}
 
-.all {
+.tweetbody {
   font-family: 'Roboto', sans-serif;
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  margin-bottom: 10px;
+  //height: 10vh;
 }
-.all::before{
+/*
+.whole::before{
   content: "";
   position: absolute; z-index: 1;
   top: 0; right: 0; bottom: 0; left: 0;
   }
+  background-color: antiquewhite;
+*/
+
+
 /*배추 관련 */
 .cabbage{
   display: block;
@@ -37,7 +43,10 @@
   }
 .user_name{margin-top: 5px;}
 
-.input_text{position: relative; z-index: 2;}
+.input_text{
+  position: relative; z-index: 2;
+  background-color: antiquewhite;
+}
 .input_text h1{
   font-size: 32px; color: #000;
   text-align: center;
