--- a/src/Components/CreateClub/group_style.scss
+++ b/src/Components/CreateClub/group_style.scss
@@ -11,13 +11,13 @@
   align-items: center;
   height: 100vh;
 }
-
+/*
 .all::before{
   content: "";
   position: absolute; z-index: 1;
   top: 0; right: 0; bottom: 0; left: 0;
   }
-
+*/
 
 .images{
   float: right;
