--- a/src/Components/GNB/index.scss
+++ b/src/Components/GNB/index.scss
@@ -1,10 +1,11 @@
 .GNB {
 	padding: 0;
 	margin: 0;
-	background: #5ce68e;
+	background: #3bbc56;
 
 	&__Inner {
 		z-index: 1000;
+
 		justify-content: space-evenly !important;
 
 		&::after {
@@ -12,7 +13,7 @@
 		}
 
 		.item {
-			font-size: 1.2rem;
+			font-size: 0.8rem;
 			color: white !important;
 			cursor: pointer !important;
 		}
